correcting some spacings on these pages.

--- a/css/allproducts.css
+++ b/css/allproducts.css
@@ -161,7 +161,7 @@
 
 /*Products Sections*/
 .products-section{
-    padding: 6% 0;
+    padding: 3% 0;
     display: flex;
     flex-direction: column;
 }
